--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lokijs": "^1.5.12",
     "mixpanel-browser": "^2.47.0",
     "next": "^13.4.0",
+    "pino": "^8.16.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-github-btn": "^1.4.0",
