--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.20",
     "@rainbow-me/rainbowkit": "^1.0.0",
     "@types/mixpanel-browser": "^2.47.1",
     "@vercel/analytics": "^1.0.1",
