--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "cross-fetch": "^3.1.6",
     "lokijs": "^1.5.12",
     "mixpanel-browser": "^2.47.0",
-    "next": "^13.4.0",
+    "next": "13.4.0",
     "pino": "^8.16.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-github-btn": "^1.4.0",
     "viem": "~0.3.36",
-    "wagmi": "^1.0.6"
+    "wagmi": "1.0.5"
   },
   "devDependencies": {
     "@types/node": "^17.0.31",
