--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@rainbow-me/rainbowkit": "^1.0.0",
     "@types/mixpanel-browser": "^2.47.1",
     "@vercel/analytics": "^1.0.1",
+    "bignumber.js": "^9.1.2",
     "cross-fetch": "^3.1.6",
     "decimal.js": "^10.4.3",
     "lokijs": "^1.5.12",
     "mixpanel-browser": "^2.47.0",
     "next": "13.4.0",
+    "next-plugin-antd-less": "^1.8.0",
     "pino": "^8.16.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
